--- a/HTML, CSS/index.html
+++ b/HTML, CSS/index.html
@@ -2,6 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta charset="Windows-1252">
+    <meta charset="ISO-8859-1">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
     <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
@@ -672,12 +674,238 @@ For 60 years, WWF has worked to help people and nature thrive. As the world's le
 <h2 class="city">Tokyo</h2>
 <p>Tokyo is the capital of Japan.</p>
 
+<h1 id="myHeader">My Header</h1>
+<h2>Difference Between Class and ID</h2>
+<p>A class name can be used by multiple HTML elements, while an id name must only be used by one HTML element within the page:</p>
+<!-- An element with a unique id -->
+<h1 id="myHeader">My Cities</h1>
+<!-- Multiple elements with same class -->
+<h2 class="city">London</h2>
+<p>London is the capital of England.</p>
+<h2 class="city">Paris</h2>
+<p>Paris is the capital of France.</p>
+<h2 class="city">Tokyo</h2>
+<p>Tokyo is the capital of Japan.</p>
+
+<p><a href="#C4">Jump to Chapter 4</a></p>
+<p><a href="#C10">Jump to Chapter 10</a></p>
+<h2>Chapter 1</h2>
+<p>This chapter explains ba bla bla</p>
+<h2>Chapter 2</h2>
+<p>This chapter explains ba bla bla</p>
+<h2>Chapter 3</h2>
+<p>This chapter explains ba bla bla</p>
+<h2 id="C4">Chapter 4</h2>
+<p>This chapter explains ba bla bla</p>
+<h2>Chapter 5</h2>
+<p>This chapter explains ba bla bla</p>
+<h2>Chapter 6</h2>
+<p>This chapter explains ba bla bla</p>
+<h2>Chapter 7</h2>
+<p>This chapter explains ba bla bla</p>
+<h2>Chapter 8</h2>
+<p>This chapter explains ba bla bla</p>
+<h2>Chapter 9</h2>
+<p>This chapter explains ba bla bla</p>
+<h2 id="C10">Chapter 10</h2>
+<p>This chapter explains ba bla bla</p>
+<h2>Chapter 11</h2>
+<p>This chapter explains ba bla bla</p>
+<h2>Chapter 12</h2>
+<p>This chapter explains ba bla bla</p>
+<h2>Chapter 13</h2>
+<p>This chapter explains ba bla bla</p>
+<h2>Chapter 14</h2>
+<p>This chapter explains ba bla bla</p>
+<h2>Chapter 15</h2>
+<p>This chapter explains ba bla bla</p>
+<h2>Chapter 16</h2>
+<p>This chapter explains ba bla bla</p>
+<h2>Chapter 17</h2>
+<p>This chapter explains ba bla bla</p>
+<h2>Chapter 18</h2>
+<p>This chapter explains ba bla bla</p>
+<h2>Chapter 19</h2>
+<p>This chapter explains ba bla bla</p>
+<h2>Chapter 20</h2>
+<p>This chapter explains ba bla bla</p>
+<h2>Chapter 21</h2>
+<p>This chapter explains ba bla bla</p>
+<h2>Chapter 22</h2>
+<p>This chapter explains ba bla bla</p>
+<h2>Chapter 23</h2>
+<p>This chapter explains ba bla bla</p>
+
+<h2>NguyenTranHoang_2021050282</h2>
+<p>You can use the height and width attributes to specify the size of the iframe:</p>
+<iframe src="demo_iframe.htm" height="200" width="300" title="Iframe Example"></iframe>
+<h2>NguyenTranHoang_2021050282</h2>
+<p>You can also use the CSS height and width properties to specify the size of the iframe:</p>
+<iframe src="demo_iframe.htm" style="height:200px;width:300px" title="Iframe Example"></iframe>
+<h2>NguyenTranHoang_2021050282</h2>
+<p>To remove the default border of the iframe, use CSS:</p>
+<iframe src="demo_iframe.htm" style="border:none;" title="Iframe Example"></iframe>
+<h2>NguyenTranHoang_2021050282</h2>
+<p>With CSS, you can also change the size, style and color of the iframe's border:</p>
+<iframe src="demo_iframe.htm" style="border:2px solid red;" title="Iframe Example"></iframe>
+<h2>NguyenTranHoang_2021050282</h2>
+<iframe src="demo_iframe.htm" name="iframe_a" height="300px" width="100%" title="Iframe Example"></iframe>
+<p><a href="https://www.w3schools.com" target="iframe_a">W3Schools.com</a></p>
+<p>When the target attribute of a link matches the name of an iframe, the link will open in the iframe.</p>
+
+<p id="demo"></p>
+<p id="demo">This is a demonstration.</p>
+<noscript>Sorry, your browser does not support JavaScript!</noscript>
+<p>A browser without support for JavaScript will show the text written inside the noscript element.</p>
+
+<h2>Using a Full URL File Path</h2>
+<img src="https://www.w3schools.com/images/picture.jpg" alt="Mountain" style="width:300px">
+<h2>Using a Relative File Path</h2>
+<img src="/images/picture.jpg" alt="Mountain" style="width:300px">
+
+<h2>The kbd Element</h2>
+<p>The kbd element is used to define keyboard input:</p>
+<p>Save the document by pressing <kbd>Ctrl + S</kbd></p>
+<p>Message from my computer:</p>
+<p><samp>File not found.<br>Press F1 to continue</samp></p>
+h2>The code Element</h2>
+<p>Programming code example:</p>
+<code>
+x = 5;
+y = 6;
+z = x + y;
+</code>
+<p>The code element does not preserve whitespace and line-breaks.</p>
+<p>To fix this, you can put the code element inside a pre element:</p>
+<pre>
+<code>
+x = 5;
+y = 6;
+z = x + y;
+</code>
+</pre>
+<h2>The var Element</h2>
+<p>The area of a triangle is: 1/2 x <var>b</var> x <var>h</var>, where <var>b</var> is the base, and <var>h</var> is the vertical height.</p>
+
+<section>
+  <h1>WWF</h1>
+  <p>The World Wide Fund for Nature (WWF) is an international organization working on issues regarding the conservation, research and restoration of the environment, formerly named the World Wildlife Fund. WWF was founded in 1961.</p>
+</section>
+<section>
+  <h1>WWF's Panda symbol</h1>
+  <p>The Panda has become the symbol of WWF. The well-known panda logo of WWF originated from a panda named Chi Chi that was transferred from the Beijing Zoo to the London Zoo in the same year of the establishment of WWF.</p>
+</section>
+<h1>The article element</h1>
+<article>
+  <h2>Google Chrome</h2>
+  <p>Google Chrome is a web browser developed by Google, released in 2008. Chrome is the world's most popular web browser today!</p>
+</article>
+<article>
+  <h2>Mozilla Firefox</h2>
+  <p>Mozilla Firefox is an open-source web browser developed by Mozilla. Firefox has been the second most popular web browser since January, 2018.</p>
+</article>
+<article>
+  <h2>Microsoft Edge</h2>
+  <p>Microsoft Edge is a web browser developed by Microsoft, released in 2015. Microsoft Edge replaced Internet Explorer.</p>
+</article>
+<article>
+  <header>
+    <h1>What Does WWF Do?</h1>
+    <p>WWF's mission:</p>
+  </header>
+  <p>WWF's mission is to stop the degradation of our planet's natural environment, and build a future in which humans live in harmony with nature.</p>
+</article>
+<footer>
+  <p>Author: NguyenTranHoang_2021050282</p>
+  <p><a href="mailto:2021050282@student.humg.edu.vn">2021050282@student.humg.edu.vn</a></p>
+</footer>
+<nav>
+  <a href="/html/">HTML</a> |
+  <a href="/css/">CSS</a> |
+  <a href="/js/">JavaScript</a> |
+  <a href="/jquery/">jQuery</a>
+</nav>
+<p>My family and I visited The Epcot center this summer. The weather was nice, and Epcot was amazing! I had a great summer together with my family!</p>
+<aside>
+<h4>Epcot Center</h4>
+<p>Epcot is a theme park at Walt Disney World Resort featuring exciting attractions, international pavilions, award-winning fireworks and seasonal special events.</p>
+</aside>
+<figure>
+  <img src="pic_trulli.jpg" alt="Trulli">
+  <figcaption>Fig1. - Trulli, Puglia, Italy.</figcaption>
+</figure>
+
+<h1>HTML Entity Example</h1>
+<h2>A space character: &nbsp;</h2>
+<h2>The less-than sign: &lt;</h2>
+<h2>The greater-than sign: &gt;</h2>
+<h2>The ampersand (and) sign: &amp;</h2>
+<h2>The double quote sign: &quot;</h2>
+<h2>The single quote sign: &apos;</h2>
+<h2>The cent sign: &cent;</h2>
+<h2>The pound sign: &pound;</h2>
+<h2>The yen sign: &yen;</h2>
+<h2>The euro sign: &euro;</h2>
+<h2>The copyright sign: &copy;</h2>
+<h2>The registered trade mark sign: &reg;</h2>
+<h1>HTML Special Character Example</h1>
+<h2>An a with a grave accent: a&#768;</h2>
+<h2>An a with an acute accent: a&#769;</h2>
+<h2>An a with a circumflex accent: a&#770;</h2>
+<h2>An a with a tilde: a&#771;</h2>
+<h2>An o with a grave accent: o&#768;</h2>
+<h2>An o with an acute accent: o&#769;</h2>
+<h2>An o with a circumflex accent: o&#770;</h2>
+<h2>An o with a tilde: o&#771;</h2>
+
+<h1>Mathematical Symbol Example</h1>
+<h2>The for-all symbol: &forall;</h2>
+<h2>The partial differential: &part;</h2>
+<h2>The there-exists symbol: &exist;</h2>
+<h2>The empty-sets symbol: &empty;</h2>
+<h2>The nabla symbol: &nabla;</h2>
+<h2>The element-of symbol: &isin;</h2>
+<h2>The not-an-element-of symbol: &notin;</h2>
+<h2>The contains-a-member symbol: &ni;</h2>
+<h2>The product symbol: &prod;</h2>
+<h2>The summation symbol: &sum;</h2>
+<h1>Greek Letter Example</h1>
+<h2>The capital alpha letter: &Alpha;</h2>
+<h2>The capital beta letter: &Beta;</h2>
+<h2>The capital gamma letter: &Gamma;</h2>
+<h2>The capital delta letter: &Delta;</h2>
+<h2>The capital epsilon letter: &Epsilon;</h2>
+<h2>The capital zeta letter: &Zeta;</h2>
+<h1>HTML Entity Example</h1>
+<h2>The arrow-left symbol: &larr;</h2>
+<h2>The arrow-up symbol: &uarr;</h2>
+<h2>The arrow-right symbol: &rarr;</h2>
+<h2>The arrow-down symbol: &darr;</h2>
+<h2>The black-spade-suit symbol: &spades;</h2>
+<h2>The black-club-suit symbol: &clubs;</h2>
+<h2>The black-heart symbol: &hearts;</h2>
+<h2>The black-diamond symbol: &diams;</h2>
+<p>I will display A B C</p>
+<p>I will display &#65; &#66; &#67;</p>
+<h1>My First Emoji: &#128512;</h1>
+<p style="font-size:48px">
+  &#128512; &#128516; &#128525; &#128151;
+</p>
+
+
 <script>
 function myFunction() {
   var x = document.getElementsByClassName("city");
   for (var i = 0; i < x.length; i++) {
     x[i].style.display = "none";
   }
+}
+function displayResult() {
+  document.getElementById("myHeader").innerHTML = "Have a nice day!";
+}
+document.getElementById("demo").innerHTML = "Hello JavaScript!";
+function myFunction() { 
+  document.getElementById("demo").innerHTML = "Hello JavaScript!";
 }
 </script>
 
